<resources>
    <string name="app_name">NoteApp</string>

    <string name="notes">Notes</string>
    <string name="edited">Edited</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>
    <string name="are_you_sure">"Are you sure you want to delete the note?"</string>
    <string name="note_title">Note Title</string>
    <string name="note">Note</string>
    <string name="image_url">Image Url</string>
    <string name="save_note">Save Note</string>
    <string name="update_note">Update Note</string>
    <string name="update">Update</string>

</resources>