<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDeleteNoteDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:text="@string/warning"
        android:layout_marginTop="@dimen/space_big_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDeleteNoteDialogDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:text="@string/are_you_sure"
        android:gravity="center"
        android:layout_marginTop="@dimen/space_medium_small"
        android:layout_marginHorizontal="@dimen/space_medium_small"
        app:layout_constraintTop_toBottomOf="@id/tvDeleteNoteDialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeleteNoteDialogYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/space_medium_small"
        android:text="@string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnDeleteNoteDialogNo"
        app:layout_constraintTop_toBottomOf="@id/tvDeleteNoteDialogDesc"
        app:layout_constraintStart_toStartOf="@id/tvDeleteNoteDialogDesc"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeleteNoteDialogNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/space_medium_small"
        android:text="@string/no"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintTop_toBottomOf="@id/tvDeleteNoteDialogDesc"
        app:layout_constraintStart_toEndOf="@id/btnDeleteNoteDialogYes"
        app:layout_constraintEnd_toEndOf="@id/tvDeleteNoteDialogDesc"/>

</androidx.constraintlayout.widget.ConstraintLayout>